--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   padding: 0.5% 16px;
   justify-content: space-between;
   text-decoration: none;
+  border-radius: 2rem;
 }
 
 .navbar a:hover {
